--- a/Lezione 1b - Iteratori e Big Data.ipynb
+++ b/Lezione 1b - Iteratori e Big Data.ipynb
@@ -56,7 +56,8 @@
     }
    },
    "source": [
-    "<img src=\"https://github.com/EnricoGiampieri/PLS2017BigDataNetworks/raw/master/notebookfiles/tradeoff_spazio_velocita.svg\" width=\"600\"/>"
+    "<img src=\"https://github.com/EnricoGiampieri/PLS2017BigDataNetworks/raw/master/notebookfiles/tradeoff_spazio_velocita.png\" width=\"600\"/>\n",
+    "\n"
    ]
   },
   {
