--- a/Lezione 1b - Iteratori e Big Data.ipynb
+++ b/Lezione 1b - Iteratori e Big Data.ipynb
@@ -15,7 +15,8 @@
     "    \n",
     "Esiste però un altro problema Big:\n",
     "\n",
-    "    anche su dati piccoli, il mio modello potrebbe richiedere più risorse di quelle a mia disposizione"
+    "    anche su dati piccoli, il mio modello potrebbe richiedere più\n",
+    "    risorse di quelle a mia disposizione"
    ]
   },
   {
@@ -86,7 +87,15 @@
     }
    },
    "source": [
-    "## un problema di esempio - rinominare i file di una collezione audio"
+    "## un problema di esempio - rinominare i file di una collezione audio\n",
+    "\n",
+    "Ovviamente si tratta di un problema giocattolo.\n",
+    "\n",
+    "Cosa succederebbe se i file non sono qualche centinaio, ma qualche milione?\n",
+    "\n",
+    "E se per ciascun file non dovessi solo rinominare, ma fare analisi complicate?\n",
+    "\n",
+    "I principi rimangono gli stessi, soltanto più estremi."
    ]
   },
   {
@@ -315,7 +324,10 @@
    "cell_type": "code",
    "execution_count": 36,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "slideshow": {
+     "slide_type": "slide"
+    }
    },
    "outputs": [],
    "source": [
@@ -336,7 +348,7 @@
    "metadata": {
     "collapsed": true,
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "slide"
     }
    },
    "outputs": [],
@@ -1047,7 +1059,7 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "slide"
+     "slide_type": "fragment"
     }
    },
    "source": [
@@ -1058,10 +1070,12 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "slide"
     }
    },
    "source": [
+    "## Map Reduce\n",
+    "\n",
     "il famoso metodo MAP-REDUCE è una combinazione di queste idee:\n",
     "\n",
     "* prendo una sequenza, la divido in sottosequenze\n",
