aggiornati i notebook dell prima lezione

--- a/Lezione 1a - Introduzione a Python.ipynb
+++ b/Lezione 1a - Introduzione a Python.ipynb
@@ -632,7 +632,8 @@
    ],
    "source": [
     "rubrica = dict()\n",
-    "rubrica['Ludovico Fabbri'] = ('334-5678901', 'Via Larga 34, Bo')\n",
+    "rubrica['Ludovico Fabbri'] = ('334-5678901', \n",
+    "                              'Via Larga 34, Bo')\n",
     "print(rubrica['Ludovico Fabbri'])"
    ]
   },
@@ -832,7 +833,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false,
     "slideshow": {
@@ -844,7 +845,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting prova.txt\n"
+      "Writing prova.txt\n"
      ]
     }
    ],
@@ -859,7 +860,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false,
     "slideshow": {
@@ -871,10 +872,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "'tonno\\n'\n",
       "6\n",
+      "'mandibola\\n'\n",
       "10\n",
+      "'rum\\n'\n",
       "4\n",
+      "'pinocchio\\n'\n",
       "10\n",
+      "'sigmoide'\n",
       "8\n"
      ]
     }
@@ -882,8 +888,18 @@
    "source": [
     "with open('prova.txt') as file: #commento\n",
     "    for line in file:\n",
+    "        print(repr(line))\n",
     "        print(len(line))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
