--- a/Lezione 2 - ricostruire la divina commedia con le catene di Markov.ipynb
+++ b/Lezione 2 - ricostruire la divina commedia con le catene di Markov.ipynb
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true,
     "slideshow": {
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false,
     "slideshow": {
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "slideshow": {
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false,
     "slideshow": {
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false,
     "slideshow": {
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false,
     "slideshow": {
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false,
     "slideshow": {
@@ -312,7 +312,7 @@
        "[('a', 4), ('b', 2)]"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -327,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false,
     "slideshow": {
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false,
     "slideshow": {
@@ -379,10 +379,10 @@
     {
      "data": {
       "text/plain": [
-       "['a', 'a', 'a', 'a', 'a', 'a', 'a', 'b', 'a', 'a']"
+       "['a', 'a', 'a', 'a', 'a', 'a', 'b', 'a', 'a', 'a']"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -409,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false,
     "slideshow": {
@@ -444,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false,
     "slideshow": {
@@ -468,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false,
     "slideshow": {
@@ -480,7 +480,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "aaaababbabaaababbaba\n"
+      "bbaaabaaaabaaabbaaba\n"
      ]
     }
    ],
@@ -496,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false,
     "slideshow": {
@@ -508,8 +508,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "oauéé   mp eim  naatza hiivtrlaiivinaaarsstid u revstétienéahrsoecm  iminmaiuvnrarcav,cae\n",
-      "asaioléair\n"
+      "ioélvtsal rlai cia l m  siszzlee riizesmuri   iartaled omaaiméazarneavru avrrsamr mvrt, usm  ar aaaa\n"
      ]
     }
    ],
@@ -583,6 +582,23 @@
     }
    },
    "source": [
+    "Questo metodo è lo stesso (di base) usato dai cellulari per il suggerimento delle parole.\n",
+    "\n",
+    "Se scrivete spesso \"buona notte\", \"buona mattina\" e \"buona cena\", una volta che inserite la parola \"buona\" da tastiera, il software sa che probabilmente dopo andrete ad inserire \"notte\", \"mattina\" o \"cena\".\n",
+    "\n",
+    "Se non ha a disposizione un buon campione personalizzato, utilizza quelli delle persone della stessa lingua.\n",
+    "\n",
+    "Questo ha creato non poco imbarazzo nel caso di frasi volgari o razziste, inserite dall'algoritmo come proposte per via del loro uso frequente (vedi il caso recente dell'IPhone che suggeriva la frase \"Vesuvio lavali col fuoco\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
     "Per ciascuna lettera dell'alfabeto dovremo quindi avere un **Counter** che mi tenga conto di quali lettere potranno seguire.\n",
     "\n",
     "Per poter fare questo devo unire le lettere del mio testo in coppie consecutive di lettere!\n",
@@ -592,7 +608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false,
     "slideshow": {
@@ -635,7 +651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false,
     "slideshow": {
@@ -663,7 +679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false,
     "slideshow": {
@@ -715,7 +731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false,
     "slideshow": {
@@ -753,7 +769,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false,
     "slideshow": {
@@ -814,7 +830,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false,
     "slideshow": {
@@ -837,7 +853,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false,
     "slideshow": {
@@ -860,22 +876,20 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true,
     "slideshow": {
      "slide_type": "slide"
     }
    },
-   "outputs": [],
    "source": [
     "ora possiamo fare lo stesso con il nostro vettore dei conteggi"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false,
     "slideshow": {
@@ -887,27 +901,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  q\n",
-      "  a\n",
-      "  c\n",
-      "  t\n",
-      "  a\n",
-      "  f\n",
-      "  m\n",
+      "  r\n",
+      "  e\n",
+      "  e\n",
       "  n\n",
       "  p\n",
-      "  i\n"
+      "  s\n",
+      "  l\n",
+      "  n\n",
+      "  a\n",
+      "  c\n"
      ]
     }
    ],
    "source": [
     "nuovo_testo = [' ']\n",
     "for i in range(10):\n",
-    "    ultima_lettera = nuovo_testo[-1]\n",
-    "    lettere = [c[1] for c, v in conteggi.items() if c[0]==ultima_lettera]\n",
-    "    frequenze = [v for c, v in conteggi.items() if c[0]==ultima_lettera]\n",
+    "    lettera = nuovo_testo[-1]\n",
+    "    lettere = [c[1] for c, v in conteggi.items() if c[0]==lettera]\n",
+    "    frequenze = [v for c, v in conteggi.items() if c[0]==lettera]\n",
     "    prossima_lettera = choices(lettere, frequenze)[0]\n",
-    "    print(ultima_lettera, prossima_lettera)"
+    "    print(lettera, prossima_lettera)"
    ]
   },
   {
@@ -923,7 +937,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false,
     "slideshow": {
@@ -935,33 +949,33 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  c\n",
-      "c c\n",
-      "c h\n",
-      "h a\n",
-      "a s\n",
-      "s i\n",
-      "i u\n",
-      "u o\n",
-      "o  \n",
-      "  s\n"
+      "  s\n",
+      "s t\n",
+      "t e\n",
+      "e f\n",
+      "f r\n",
+      "r i\n",
+      "i s\n",
+      "s a\n",
+      "a i\n",
+      "i  \n"
      ]
     }
    ],
    "source": [
     "nuovo_testo = [' ']\n",
     "for i in range(10):\n",
-    "    ultima_lettera = nuovo_testo[-1]\n",
-    "    lettere = [c[1] for c, v in conteggi.items() if c[0]==ultima_lettera]\n",
-    "    frequenze = [v for c, v in conteggi.items() if c[0]==ultima_lettera]\n",
+    "    lettera = nuovo_testo[-1]\n",
+    "    lettere = [c[1] for c, v in conteggi.items() if c[0]==lettera]\n",
+    "    frequenze = [v for c, v in conteggi.items() if c[0]==lettera]\n",
     "    prossima_lettera = choices(lettere, frequenze)[0]\n",
-    "    print(ultima_lettera, prossima_lettera)\n",
+    "    print(lettera, prossima_lettera)\n",
     "    nuovo_testo.append(prossima_lettera)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false,
     "slideshow": {
@@ -973,7 +987,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " cchasiuo s\n"
+      " stefrisai \n"
      ]
     }
    ],
@@ -994,7 +1008,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 26,
    "metadata": {
     "collapsed": false,
     "slideshow": {
@@ -1006,20 +1020,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " ntomi fe,\n",
-      "der mani,\n",
-      "nioven n atorid’ disiaueconossie a che mio.\n",
-      "esta coneto, olo, ccch’è dorosùescrenerentoso vetelo lselon giade cor stiatamenintre asananscco\n",
-      "nvra ffuossca son aico funereno ronzi i \n"
+      " e gh’a vesta\n",
+      "ocheïom’ sercosone mirenadietre coma cche ce iove co,\n",
+      "ino,\n",
+      "«l sio vogue cenel’i no, co.\n",
+      "\n",
+      "ndido, me geioniar ’e e,\n",
+      "sónoranve: rotosi da ttr,\n",
+      "ere si ’ de, quielò de ato ce l ’a a chi sediru\n"
      ]
     }
    ],
    "source": [
     "nuovo_testo = [' ']\n",
     "for i in range(200):\n",
-    "    ultima_lettera = nuovo_testo[-1]\n",
-    "    lettere = [c[-1] for c, v in conteggi.items() if c[0]==ultima_lettera]\n",
-    "    frequenze = [v for c, v in conteggi.items() if c[0]==ultima_lettera]\n",
+    "    lettera = nuovo_testo[-1]\n",
+    "    lettere = [c[-1] for c, v in conteggi.items() if c[0]==lettera]\n",
+    "    frequenze = [v for c, v in conteggi.items() if c[0]==lettera]\n",
     "    prossima_lettera = choices(lettere, frequenze)[0]\n",
     "    nuovo_testo.append(prossima_lettera)\n",
     "print(str.join('', nuovo_testo))"
@@ -1042,7 +1059,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 27,
    "metadata": {
     "collapsed": false,
     "slideshow": {
@@ -1083,7 +1100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 28,
    "metadata": {
     "collapsed": false,
     "slideshow": {
@@ -1095,22 +1112,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "che,\n",
-      "finserfia è li,\n",
-      "che sùbidantera rete la or chi sendon vile pire pospretalio ide co ’l la.\n",
+      "ch’enducia».\n",
       "\n",
-      "erri mutai oco,\n",
-      "che, chiardispli, «maevi ava\n",
-      "pricaglibeata mi facche permar questalcerïattia pin ci ven su\n"
+      "el prisolo bia\n",
+      "penti a gel ché moda ti ger riposì ché ma va,\n",
+      "vernima.\n",
+      "\n",
+      "d’e’ affine danime lormio\n",
+      "e una bullibisonda qualto io su posti;\n",
+      "\n",
+      "mecomer cortintro va o el mo in don fro,\n",
+      "e lavellev\n"
      ]
     }
    ],
    "source": [
     "nuovo_testo = ['c', 'h']\n",
     "for i in range(200):\n",
-    "    ultima_lettera = tuple(nuovo_testo[-2:])\n",
-    "    lettere = [c[-1] for c, v in conteggi.items() if c[:2]==ultima_lettera]\n",
-    "    frequenze = [v for c, v in conteggi.items() if c[:2]==ultima_lettera]\n",
+    "    lettera = tuple(nuovo_testo[-2:])\n",
+    "    lettere = [c[-1] for c, v in conteggi.items() if c[:2]==lettera]\n",
+    "    frequenze = [v for c, v in conteggi.items() if c[:2]==lettera]\n",
     "    prossima_lettera = choices(lettere, frequenze)[0]\n",
     "    nuovo_testo.append(prossima_lettera)\n",
     "print(str.join('', nuovo_testo))"
@@ -1131,7 +1152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 29,
    "metadata": {
     "collapsed": false,
     "slideshow": {
@@ -1143,13 +1164,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "nel primando e cozzosa\n",
-      "de la cella beatichezzar si virgili sol miglia\n",
-      "tu che i parte.\n",
+      "nel sape\n",
+      "che ne proci coi tempresse noia è ’l sa il capo giava.\n",
       "\n",
-      "e qui sovra frente neggentro da scun diedichi così d’una menti\n",
-      "per pare il sazia, ch’un fa l’arra e frato sta\n",
-      "lo di \n"
+      "e ti biavorriga.\n",
+      "\n",
+      "per che la donoso assame\n",
+      "esti,\n",
+      "\n",
+      "e sona.\n",
+      "\n",
+      "sol del ben sua già nullo la vista in piegatente dentì lonte ha mestorna,\n",
+      "e si \n"
      ]
     }
    ],
@@ -1164,9 +1190,9 @@
     "    \n",
     "nuovo_testo = ['n', 'e', 'l']\n",
     "for i in range(200):\n",
-    "    ultima_lettera = tuple(nuovo_testo[-L:])\n",
-    "    lettere = [c[-1] for c, v in conteggi.items() if c[:L]==ultima_lettera]\n",
-    "    frequenze = [v for c, v in conteggi.items() if c[:L]==ultima_lettera]\n",
+    "    lettera = tuple(nuovo_testo[-L:])\n",
+    "    lettere = [c[-1] for c, v in conteggi.items() if c[:L]==lettera]\n",
+    "    frequenze = [v for c, v in conteggi.items() if c[:L]==lettera]\n",
     "    prossima_lettera = choices(lettere, frequenze)[0]\n",
     "    nuovo_testo.append(prossima_lettera)\n",
     "print(str.join('', nuovo_testo))"
@@ -1185,7 +1211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 30,
    "metadata": {
     "collapsed": true,
     "slideshow": {
@@ -1205,9 +1231,9 @@
     "        conteggi = Counter(coppie)\n",
     "\n",
     "    while True:\n",
-    "        ultima_lettera = tuple(nuovo_testo[-L:])\n",
-    "        lettere = [c[-1] for c, v in conteggi.items() if c[:L]==ultima_lettera]\n",
-    "        frequenze = [v for c, v in conteggi.items() if c[:L]==ultima_lettera]\n",
+    "        lettera = tuple(nuovo_testo[-L:])\n",
+    "        lettere = [c[-1] for c, v in conteggi.items() if c[:L]==lettera]\n",
+    "        frequenze = [v for c, v in conteggi.items() if c[:L]==lettera]\n",
     "        prossima_lettera = choices(lettere, frequenze)[0]\n",
     "        nuovo_testo.append(prossima_lettera)\n",
     "        nuovo_testo = nuovo_testo[1:]\n",
@@ -1216,7 +1242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 31,
    "metadata": {
     "collapsed": false,
     "slideshow": {
@@ -1228,17 +1254,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " mir e pre ’l den di le.\n",
-      "\n",
-      "novoi, che, ernigua batte».\n",
-      "\n",
-      "e noi strea le\n",
-      "no a risarlata altosandunfincorissanondo diplo letti poi malpessuanne.\n",
-      "\n",
-      "e a inangogne\n",
-      "lo da:\n",
-      "e ’l suro, «che a la, etto vii»,\n",
-      "per \n"
+      "la on pubito a brente,\n",
+      "si quel bole ’ iordison dov’ebbelo ’l che,\n",
+      "cortarol sporre o pocci\n",
+      "antroscerte note chi fia bento né noncier che lassolà dun te ’l vida grista ocche quan pin sé pa,\n",
+      "e ’l fola là\n"
      ]
     }
    ],
@@ -1249,7 +1269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 32,
    "metadata": {
     "collapsed": false,
     "slideshow": {
@@ -1261,16 +1281,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " me pro sole\n",
-      "ze m’altrodo dier tu po»,\n",
-      "«pel mi pocche la faletto,\n",
-      "né ’l dalci\n",
-      "e n’è ch’è quandendoluma sù che te’ el peranto\n",
-      "fola io morche po allordo altra lorte;\n",
+      "rvi».\n",
       "\n",
-      "detto.\n",
-      "\n",
-      "quelli fan puo di livanosop\n"
+      "che poscuombe vutte tor vol, quante cembra si, almi combil conde ’l sarta\n",
+      "par disper ocoi monte mal crubilla sé purba\n",
+      "che ummi cor li a de haniglingel che perbia\n",
+      "e poia for né pere\n",
+      "che questrai\n"
      ]
     }
    ],
@@ -1281,7 +1298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 33,
    "metadata": {
     "collapsed": false,
     "slideshow": {
@@ -1293,17 +1310,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "largogne sanza lo suor con le ciascia di tua visole e v’hai».\n",
+      " cinquesti là dolo una buonacquei divinanza, che ’l mi te era mi conti lena il vien: «più si dice acun: ‘i’ di mi dissai,\n",
+      "che noi lumeria, viso.\n",
       "\n",
-      "«se nostran perché iero\n",
-      "quand’ io mor lo setto risplena,\n",
-      "per alchìmia,\n",
+      "«quandome splendo,\n",
+      "sommi cosa compiogo.\n",
       "\n",
-      "qual saltre:\n",
-      "agusta bra filizia tarda;\n",
-      "ma ividio due,\n",
-      "nel senti;\n",
-      "\n"
+      "poi cominci s\n"
      ]
     }
    ],
@@ -1314,7 +1327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 34,
    "metadata": {
     "collapsed": false,
     "slideshow": {
@@ -1326,14 +1339,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tu ch’a cagion ritrarrà vinta ch’è da posso.\n",
-      "\n",
-      "è che si valie si vostromma\n",
-      "fia nature mi di le minòs meos’ io stilo\n",
-      "non vicin voi santo rua\n",
-      "con tantoana,\n",
-      "per che vogliar dipinta?»,\n",
-      "che ’l fiamma elli a\n"
+      "terra questo\n",
+      "tacito maria con quella a quindi povera, e te ne l’ha meritón creatura,\n",
+      "udirai, ma s’ebbe “i’ mi mosso, che la ripa usciole se in su le fischi crissimo fossi i più carno, per acqua, e fa \n"
      ]
     }
    ],
