correzione per problema con python 3.5

--- a/Lezione 2 - ricostruire la divina commedia con le catene di Markov.ipynb
+++ b/Lezione 2 - ricostruire la divina commedia con le catene di Markov.ipynb
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 35,
    "metadata": {
     "collapsed": false,
     "slideshow": {
@@ -212,6 +212,19 @@
    },
    "source": [
     "Per le liste potrei farlo anche in modo più semplice, ma in generale gli iteratore non mi supportano la sottoselezione in modo semplice."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "file = './divinacommedia_cleaned.txt'\n",
+    "with open(file, 'r'):\n",
+    "    pass"
    ]
   },
   {
@@ -368,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 42,
    "metadata": {
     "collapsed": false,
     "slideshow": {
@@ -379,16 +392,51 @@
     {
      "data": {
       "text/plain": [
-       "['a', 'a', 'a', 'a', 'a', 'a', 'b', 'a', 'a', 'a']"
+       "['a', 'a', 'a', 'a', 'b', 'a', 'a', 'a', 'a', 'a']"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "from random import choices\n",
+    "\n",
+    "lettere = ['a', 'b']\n",
+    "frequenze = [9, 1]\n",
+    "\n",
+    "choices(lettere, weights=frequenze, k=10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['a', 'a', 'a', 'a', 'a', 'a', 'a', 'a', 'a', 'a']"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from numpy.random import choice\n",
+    "from numpy import array\n",
+    "def choices(lista, weights, k=1):\n",
+    "    weights = array(weights)/sum(weights)\n",
+    "    res = choice(lista, k, p=weights)\n",
+    "    return list(res)\n",
     "\n",
     "lettere = ['a', 'b']\n",
     "frequenze = [9, 1]\n",
