--- a/Lezione 1a - Introduzione a Python.ipynb
+++ b/Lezione 1a - Introduzione a Python.ipynb
@@ -115,7 +115,7 @@
     "\n",
     "Uno degli editor più famosi per il calcolo scientifico in python è **Spyder** (http://code.google.com/p/spyderlib/), che fornisce un'interfaccia molto simile a quella di Matlab. È unprogramma molto solido e funzionale, ed è un'ottima piattaforma su cui lavorare.\n",
     "\n",
-    "Un'altro approccio è l'utilizzo di un IDE (Integrated Development Environment) completo, quale PyCharm, Wing o Eclipse. Il mio personale preferito, molto più semplice ma con tutte le funzioni che mi servono è **Ninja** (http://ninja-ide.org/)."
+    "Un'altro approccio è l'utilizzo di un IDE (Integrated Development Environment) completo, quale PyCharm, Wing o Eclipse. Il mio personale preferito, molto più semplice ma con tutte le funzioni che mi servono è **Atom** (https://ide.atom.io/)."
    ]
   },
   {
@@ -130,7 +130,7 @@
     "\n",
     "- la IPython shell, che è descrivibile come un terminale python sotto steroidi, che può tranquillamente sostituire la shell di sistema\n",
     "- La QTConsole, che contiene un ibrido fra una shell ed un sistema di gestione tramite GUI, e permette l'utilizzo dei grafici inline invece che in finestre separate.\n",
-    "- Il Notebook, ovvero quello che stò usando in questo momento, che è un'interfaccia web ad un serve di esecuzione che permette di mescolare testo, codice, grafica e formule in un unico insieme. In particolare quello che stò usando in questo momento è la versione **3.5** di IPython"
+    "- Il Notebook, ovvero quello che stò usando in questo momento, che è un'interfaccia web ad un serve di esecuzione che permette di mescolare testo, codice, grafica e formule in un unico insieme. In particolare quello che stò usando in questo momento è la versione **3.6** di IPython"
    ]
   },
   {
@@ -196,7 +196,6 @@
    "cell_type": "code",
    "execution_count": 35,
    "metadata": {
-    "collapsed": false,
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -229,7 +228,6 @@
    "cell_type": "code",
    "execution_count": 36,
    "metadata": {
-    "collapsed": false,
     "slideshow": {
      "slide_type": "slide"
     }
@@ -268,7 +266,6 @@
    "cell_type": "code",
    "execution_count": 37,
    "metadata": {
-    "collapsed": false,
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -304,7 +301,6 @@
    "cell_type": "code",
    "execution_count": 38,
    "metadata": {
-    "collapsed": false,
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -367,7 +363,6 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": false,
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -394,7 +389,6 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
-    "collapsed": false,
     "slideshow": {
      "slide_type": "slide"
     }
@@ -429,7 +423,6 @@
    "cell_type": "code",
    "execution_count": 41,
    "metadata": {
-    "collapsed": false,
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -465,7 +458,6 @@
    "cell_type": "code",
    "execution_count": 42,
    "metadata": {
-    "collapsed": false,
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -494,7 +486,6 @@
    "cell_type": "code",
    "execution_count": 43,
    "metadata": {
-    "collapsed": false,
     "slideshow": {
      "slide_type": "slide"
     }
@@ -518,7 +509,6 @@
    "cell_type": "code",
    "execution_count": 44,
    "metadata": {
-    "collapsed": false,
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -554,7 +544,6 @@
    "cell_type": "code",
    "execution_count": 45,
    "metadata": {
-    "collapsed": false,
     "slideshow": {
      "slide_type": "slide"
     }
@@ -616,7 +605,6 @@
    "cell_type": "code",
    "execution_count": 46,
    "metadata": {
-    "collapsed": false,
     "slideshow": {
      "slide_type": "slide"
     }
@@ -654,7 +642,6 @@
    "cell_type": "code",
    "execution_count": 48,
    "metadata": {
-    "collapsed": false,
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -680,7 +667,6 @@
    "cell_type": "code",
    "execution_count": 47,
    "metadata": {
-    "collapsed": false,
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -722,7 +708,6 @@
    "cell_type": "code",
    "execution_count": 50,
    "metadata": {
-    "collapsed": false,
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -766,7 +751,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -796,7 +780,6 @@
    "cell_type": "code",
    "execution_count": 51,
    "metadata": {
-    "collapsed": false,
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -835,7 +818,6 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": false,
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -845,7 +827,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing prova.txt\n"
+      "Overwriting prova.txt\n"
      ]
     }
    ],
@@ -862,7 +844,6 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
-    "collapsed": false,
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -891,15 +872,6 @@
     "        print(repr(line))\n",
     "        print(len(line))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -919,9 +891,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 2
 }
