--- a/Lezione 1b - Iteratori e Big Data.ipynb
+++ b/Lezione 1b - Iteratori e Big Data.ipynb
@@ -102,7 +102,6 @@
    "cell_type": "code",
    "execution_count": 30,
    "metadata": {
-    "collapsed": false,
     "slideshow": {
      "slide_type": "slide"
     }
@@ -124,7 +123,6 @@
    "cell_type": "code",
    "execution_count": 31,
    "metadata": {
-    "collapsed": false,
     "slideshow": {
      "slide_type": "slide"
     }
@@ -189,7 +187,6 @@
    "cell_type": "code",
    "execution_count": 33,
    "metadata": {
-    "collapsed": false,
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -262,7 +259,6 @@
    "cell_type": "code",
    "execution_count": 35,
    "metadata": {
-    "collapsed": false,
     "slideshow": {
      "slide_type": "slide"
     }
@@ -357,16 +353,16 @@
     "for basepath, listdir, listfiles in os.walk(directory):\n",
     "    for filename in listfiles:\n",
     "        if filename.lower().endswith('mp3'):\n",
-    "            new_filename = filename.lower()\n",
-    "            os.rename(os.path.join(basepath, filename),\n",
-    "                      os.path.join(basepath, new_filename))"
+    "            #new_filename = filename.lower()\n",
+    "            #os.rename(os.path.join(basepath, filename),\n",
+    "            #          os.path.join(basepath, new_filename))\n",
+    "            print(os.path.join(basepath, filename))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 38,
    "metadata": {
-    "collapsed": false,
     "slideshow": {
      "slide_type": "slide"
     }
@@ -478,7 +474,6 @@
    "cell_type": "code",
    "execution_count": 39,
    "metadata": {
-    "collapsed": false,
     "slideshow": {
      "slide_type": "slide"
     }
@@ -526,7 +521,6 @@
    "cell_type": "code",
    "execution_count": 40,
    "metadata": {
-    "collapsed": false,
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -572,7 +566,6 @@
    "cell_type": "code",
    "execution_count": 42,
    "metadata": {
-    "collapsed": false,
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -635,7 +628,6 @@
    "cell_type": "code",
    "execution_count": 46,
    "metadata": {
-    "collapsed": false,
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -674,7 +666,6 @@
    "cell_type": "code",
    "execution_count": 51,
    "metadata": {
-    "collapsed": false,
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -711,7 +702,6 @@
    "cell_type": "code",
    "execution_count": 53,
    "metadata": {
-    "collapsed": false,
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -751,7 +741,6 @@
    "cell_type": "code",
    "execution_count": 54,
    "metadata": {
-    "collapsed": false,
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -787,7 +776,6 @@
    "cell_type": "code",
    "execution_count": 55,
    "metadata": {
-    "collapsed": false,
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -825,7 +813,6 @@
    "cell_type": "code",
    "execution_count": 56,
    "metadata": {
-    "collapsed": false,
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -864,7 +851,6 @@
    "cell_type": "code",
    "execution_count": 57,
    "metadata": {
-    "collapsed": false,
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -899,7 +885,6 @@
    "cell_type": "code",
    "execution_count": 60,
    "metadata": {
-    "collapsed": false,
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -938,7 +923,6 @@
    "cell_type": "code",
    "execution_count": 61,
    "metadata": {
-    "collapsed": false,
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -976,7 +960,6 @@
    "cell_type": "code",
    "execution_count": 64,
    "metadata": {
-    "collapsed": false,
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -1032,7 +1015,6 @@
    "cell_type": "code",
    "execution_count": 71,
    "metadata": {
-    "collapsed": false,
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -1112,7 +1094,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
