--- a/Lezione 1a - Introduzione a Python.ipynb
+++ b/Lezione 1a - Introduzione a Python.ipynb
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 2,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -205,12 +205,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "not Hello, World!\n"
+      "Hello, World!\n"
      ]
     }
    ],
    "source": [
-    "print(\"not Hello, World!\")"
+    "print(\"Hello, World!\")"
    ]
   },
   {
